initial pass at yp pricing structure

--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -1,218 +1,540 @@
-= [DRAFT] Random Beacon Pricing: Bid for Seed
+:toc: macro
 
-== Overview
+= Pricing
 
-Customers publish bids, including:
+== Background
 
-- bid amount
-- expiration time
-- seed commitment
+The beacon needs to capture enough value to make it self-sufficient.
+It uses a simple method for pricing beacon entries
+that doesn't present easy exploitation opportunities.
+The pricing method avoids
+the known downfalls of previously considered, more complex, schemes,
+such as price discrimination being defeated by callback pooling.
 
-When the total of bids in the pool reaches or exceeds _Price~current~_
-a number of highest bids _Bids~used~_ are selected so that the sum of the selected
-bids' values is at least _Price~current~_.
+== Prior Work
+What is this pricing mechanism based on?
 
-The number of bids in _Bids~used~_ determines the _Timeout~seedReveal~_
-by some function `timeoutByBidN`. With a smaller number of bidders, the timeout
-will be reached sooner and thus the output will be generated faster; this
-incentivizes placing high bids to improve the reliability.
+=== Implementation
 
-The beacon signing group is selected. The customer who placed the highest bid in
-_Bids~used~_ will open their seed commitment (if not performed within
-_Timeout~seedReveal~_, the next highest bidder will take their place, continuing
-until either a valid seed has been revealed or no bidders are left).
+Provide overview diagram?
 
-The seed commitment and the beacon's previous output will be used to produce the
-next output of the random beacon.
+==== Making requests
+How are requests made?
 
-== Stakes
+When a customer wishes to receive an entry,
+they query the beacon for the _entry fee estimate_
+applicable for their request:
+`entry_fee_estimate = estimate_fee(callback_gas_amount)`.
+The _callback gas amount_ is the amount of gas required
+for the customer's callback to execute successfully;
+if no callback is required `callback_gas_amount = 0`.
 
-The amounts staked by beacon operators should scale with the prices customers
-pay for the beacon outputs. This can be achieved by either a linear or
-profit-proportional method.
+The estimate returned is guaranteed to be valid
+only for the transaction it is called in,
+and for callback gas costs
+equal or lower than the provided callback gas amount.
+Thus the request should be made immediately after receiving the estimate.
+Paying more than the applicable entry fee estimate
+has a minimal cost to the requester
+as excess fees will be refunded.
+Insufficient payment will lead to the request being rejected
+and the transaction reverted.
 
-=== Linear stakes
+To make a request after determining the applicable fee
+the customer must call the request method on the beacon,
+transferring enough currency to cover the fee:
+`request_entry.value(entry_fee_estimate)()`.
 
-The total value of the bids in _Bids~used~_ is multiplied by
-_BID_STAKE_MULTIPLIER_ to determine the total stake for that beacon output;
-this is then divided by the number of members in a beacon signing group
-to calculate each member's individual stake.
+If the customer wishes to receive the generated random number in a callback,
+they should also specify the _callback address_, _callback function_, 
+and _callback gas amount_:
+`request_entry.value(entry_fee_estimate)(callback_address, callback_function, callback_gas)`.
 
-[source, python]
-----
-bid_total = sum(bids.map(.amount))
+No new requests should be made
+while the beacon is already processing another request.
+Requests made while the beacon is busy will be rejected
+and the transaction reverted.
 
-staked_total = bid_total * BID_STAKE_MULTIPLIER
+==== Receiving a request
+How are requests handled by the protocol?
 
-member_stake = staked_total / N
-----
+If the beacon is already serving an earlier request,
+it rejects any new requests
+(implicitly refunding the fees by reverting the transactions).
 
-The total amount staked scales directly with the total amount bid for
-the output. As the cost of generating an output is more or less constant,
-profits for stakers will be highest when the bid totals are highest.
+When the beacon is non-busy and receives a request,
+it first checks that the _request fee_ exceeds
+the _entry fee estimate_ with the _callback gas amount_ from the request.
 
-=== Profit-proportional stakes
+Once the request has been verified to be sufficiently funded,
+the beacon select the new signing group.
+The selected group is tasked with producing the new entry.
 
-Alternatively, the total stakes could be made proportional to the
-total profits of generating such an output:
+The request is set as the _pending request_
+including the following information:
 
-[source, python]
-----
-bid_total = sum(bids.map(.amount))
+- the _requester address_
 
-profit_amount = bid_total - (getCurrentGasPrice() * OUTPUT_GAS_COST)
+- the _callback address_, _callback function_, and _callback gas amount_, if applicable
 
-staked_total = profit_amount * BID_STAKE_MULTIPLIER
+- the _assigned signing group_{blank}footnote:[This is needed
+if changes to the active groups can be made
+while waiting for an entry.
+]
 
-member_stake = staked_total / N
-----
+- the _submission delay base time_ which equals
+the number of the block the request was received in,
+plus 1{blank}footnote:[The way of calculating rewards
+is inevitably prone to off-by-one errors _somewhere_
+and doing the incrementing at request time seems the simplest.
+]
 
-In this case, the risk:reward ratio stays consistent, and the stakes vary
-from minimal to significant; even a small increase in bid amount over the
-minimum can substantially increase the stakes. If higher stakers for beacon
-operators are sufficiently desirable to customers this can serve as an
-incentive to bid above the minimum, especially for solo bidders who might
-otherwise be likely to bid the mimimum required to reach solo status.
+- the _estimated gas price_ at the time of the request{blank}footnote:[This
+means we don't need to assume the price feed remains stable
+between the making of the request and the paying out of rewards.
+If the gas price feed is guaranteed to not change
+until a valid entry is received, this is not necessary.
+]
 
-== Bidding
+- the _request fee_ paid
 
-[source, python]
-----
-class Bid(NamedTuple):
-    amount:         Money
-    expiresAt:      Blockheight
-    seedCommitment: Commitment[SeedValue]
-----
+==== Serving a request
 
-The BFS model is intended to both enable "crowdfunded" output generation by
-pooling smaller bids, and to incentivize customers with particular needs to
-offer substantially higher bids.
+===== Receiving submissions
+How does the protocol handle a submission from the relay?
 
-An output with a smaller number of bids will have shorter timeouts for the top
-bidder to respond before the next highest bidder is called to reveal their seed,
-and a smaller number of bidders altogether.
-This means that reducing the number of bidders for an output will significantly
-improve the reliability of the output generation, and a customer desiring fast
-response times has an incentive to bid more to bump off bottom bidders (reducing
-the total number of bidders and thus the timeout intervals) and to reach top
-bidder status (ensuring that they don't need to rely on someone else's
-responsiveness).
+When the assigned signing group has produced a valid entry,
+one of its members should submit it to the beacon.
+The first member to submit a valid entry is the _submitter_.
+_Submission deadline_ is the block number before which the 
+valid entry must be submitted.
 
-For customers with particularly high trust or responsiveness requirements,
-solo bidding should be the obvious choice.
+Submissions that fail verification are ignored.
+Repeat submissions for a request that has already been served
+should be dropped immediately,
+minimizing the gas expenditure.
 
-=== Pool bidding
+If no valid entry has been received by the _submission deadline_,
+a submission timeout can be called by anyone.
+If the submission times out,
+the failing group is terminated and its members slashed.
+A new signing group is assigned from the remaining active groups
+and the submission delay calculation is reset
+by setting the _submission delay base time_
+to the previous _submission deadline_.
 
-The bid pool is an ordered data structure supporting the following operations:
+When a valid entry submission is received on-chain
+it is emitted in an event,
+the requester's callback is called if applicable,
+and fees, rewards and refunds are paid out.
 
-- querying the total of the pooled bids
-- retrieving and removing the highest bid
-- adding a new bid to the pool
-- removing any expired bids
+===== Callback processing
+How are callbacks processed?
 
-If a bid doesn't exceed the minimum price to produce an output, it will be
-added to the bid pool. Bids whose expiration blockheight has been reached will
-be removed from the bid pool and refunded (minus gas fees?).
+If the requester specified a callback,
+the callback is called using the callback gas amount as the maximum gas.
 
-If the total amount of currency in the pooled bids exceeds the minimum price,
-output generation will commence. The highest bid will be removed from the pool
-and added to a temporary pool, repeating until the total of the bids in the
-temporary pool is at least the price required to generate a beacon output.
-Leftover bids will stay in the pool.
+If the callback gas amount turns to be not enough to execute the callback,
+callback execution is skipped and the rest of the relay entry submission code
+is processed as usual.
 
-Beacon output generation will then be triggered. Information from the bids is
-used to select the group to perform the BLS signature for the output. The top
-bidder (bidder who made the highest-value bid among those used for that output)
-is called to reveal the seed value they committed to in their bid. If a seed
-value matching the commitment is not presented within the timeout period, the
-top bidder position will shift to the next highest bidder, continuing until
-either a valid seed has been revealed or every bidder has timed out; in the
-latter case the generation aborts and no output is produced.
+After the callback is made
+the amount of gas spent on the call
+is multiplied with the lower of the
+_estimated gas price_ at the time of the request,
+or the actual gas price of the transaction,
+to get the _callback expenditure_.
 
-=== Solo bidding
+The minimum of the gas price protects the beacon and requester against
+malicious miner-submitters.
 
-Solo bidding means a situation where one single bid exceeds the current minimum
-price for a beacon output. This provides the greatest responsiveness and
-resistance to output manipulation.
+If the submitter is also a miner, they can place any arbitrary gas 
+price on the transaction. If the gas price used for calculating the callback 
+expenditure is higher than the quoted amount and the amount of gas used on the 
+call is close to the maximum specified by the requester, the requester refund 
+can go negative. If the negative requester refund is added to the 1% surplus 
+pool subsidy it can permit the miner-submitter to steal the subsidy.
 
-==== Top bidder manipulation
+On the other hand, if the amount of gas spent on the callback is less than the 
+provided maximum, a miner submitter can set the gas price to such an amount that 
+the requester is billed for the entire gas budget even if they really only spent 
+a small fraction of it. This means a miner submitter can steal the requester's 
+refund.
 
-In the BFS algorithm, the top bidder is called to reveal their committed seed
-value to trigger the output generation. If the top bidder doesn't respond within
-the specified timeout period, the next highest bidder is called to reveal their
-seed instead, and so forth. If none of the bidders respond, the generation is
-aborted.
+If the callback execution uses more gas than specified in the request, it should 
+run out of gas. Thus the only scenario where the callback execution can cost more 
+than was quoted and paid for, is when the gas cost of the transaction exceeds the 
+quoted estimate (which includes the safety margin mentioned in the gas price feed
+section). The submitter is intended to take the hit for submitting with a gas price 
+that exceeds the estimate.
 
-If an actor holding the top bidder position is also in control of the selected
-group, they can determine the output of the beacon in advance of publishing the
-seed value. If the output is unfavorable, they can withhold the seed and wait
-for the next highest bidder to reveal theirs. A powerful actor can safely retry
-the generation as many times as they have bids higher than the highest
-independent bidder.
+===== Requester refund
+How is a refund to the requester processes?
 
-In the case where there is only one bidder paying for the entire output
-generation, reaching timeout simply aborts the generation.
-(As nobody else relies on the response time of a solo bidder, the timeout can
-alternatively be set to infinite with few downsides, with the advantage of
-protecting against transient network issues, miner censorship etc. causing the
-solo bidder to lose their bid amount without getting the output they paid for.)
+After the _callback expenditure_ has been determined,
+it is added to the _entry base price_ calculated with the _estimated gas price_
+to get the _actual entry price_.
+If no callback was specified in the request the _callback expenditure_ is 0
+and the _actual entry price = entry base price_.
 
-This means that no manipulation opportunity is present, and third parties can
-trust the output to be independent
+The difference between the actual entry price and the _requester fee_
+is refunded to the requester,
+along with 1% of the _request subsidy pool_ of the beacon.
 
-[NOTE]
-====
-To control the output of a solo bidder, the actor needs to control all of:
+===== Paying rewards and operational fees
+How are payments made to the various actors in this process?
 
-- the bidder: to know the seed value in advance
-- the miners: to manipulate the blocks used to select the beacon group, which
-is the only source of nondeterminism in a solo bidding situation
-- the stakers: to reliably predict the outputs of the groups that might be
-selected
+The _entry base price_ consists of:
+the beacon's nominal _profit margin_ for the entry;
+a _DKG contribution_ to cover the cost of creating new signing groups,
+amortized over multiple entries per DKG;
+and the _entry verification fee_ for the gas costs of entry submission.
 
-In practice this is expected to be highly unlikely, making solo bidding suitable
-for situations requiring the highest levels of third-party trust.
-====
+The submitter and other group members are rewarded
+based on the _submission delay_;
+time from the _submission delay base time_
+to the submission of the valid entry.
+The rewards are specified in their own section.
 
-==== Implementation
+If the sum of rewards paid out
+is less than the _profit margin + entry verification fee_,
+the difference is added to the _request subsidy pool_.
 
-In the BFS algorithm, solo bidding arises from the design without special cases,
-except optionally disabling top bidder timeouts when the number of bidders is 1.
+The _DKG contribution_ is added to the _DKG fee pool_,
+and the state of the pool is checked.
+If the amount in the DKG fee pool equals or exceeds the _DKG cost estimate_,
+group creation and a new DKG may be triggered.footnote:[Whether
+DKG is actually triggered is open.
+Always triggering DKG when the fee pool reaches a given level
+doesn't smooth out fluctuations in demand:
+a very large number of groups is created when demand is high,
+but those groups will expire on schedule if a slump occurs.
+A stochastic method for triggering DKG
+would permit smoothing out demand fluctuations:
+Take the current number of active groups,
+divide by a threshold number of groups,
+and e.g. square root the result to get a(n insensitivity) number;
+Trigger DKG if the entry (interpreted as a number from 0 to 1)
+is less than 1 divided by the above number.
+If the number of active groups is below the threshold,
+this attempts to create a new signing group
+every time sufficient funding is present;
+with higher demand the number of groups
+tends to be proportional to _(number of entries in expiration period)^2/3^_.
+]
 
-== Pricing
+==== Rewards
 
-The function `getCurrentOutputPrice` does most of the heavy lifting here.
-While defining a precise function would require more work and is out of scope,
-some features can be determined:
+A _base reward_ for each member of a signing group that produces an entry
+is specified in the system constants in the service contract.
+The nominal _profit margin_ of each entry
+equals the _base reward_ multiplied by the applicable _group size_.
 
-- The price of generating an output should always be higher than the gas cost
-- With greater demand (more outputs generated recently) the price should rise,
-with low demand (few outputs generated) it should fall
-- If a certain total amount of bids exceeding the gas cost is placed,
-the beacon should generate an output eventually as a long period of inactivity
-pushes the price below the bid sum
+The exact rewards paid out to operators are based on the base reward
+but vary according to _submission delay_ and submitter position.
 
-== Timeouts
+If the amount paid out to the signing group in _group rewards_
+and the submitter's _extra reward_ is less than the _profit margin_,
+the difference is added to the beacon's _request subsidy pool_
+to incentivize customers to request entries.
 
-The function `timeoutByBidN` returns the timeout for _each_ top bidder for a
-certain number of bids. The function can be constant, increasing, or decreasing
-depending on what characteristics are desired. A special case for _n~bids~ = 1_
-can be included to disable top bidder timeouts for solo bidders.
+===== Group reward
+How are group members compensated?
 
-In pool bidding situations, the output generation can be set to commence either
-immediately as the seed value is revealed, or after the minimum timeout has been
-reached (in which case the group will either generate the output if a valid seed
-is revealed, or wait another timeout period for the next highest bidder to
-reveal their seed value).
+The group reward is paid to every member of the signing group,
+including the submitter,
+upon submission of a valid entry.
 
-In the first case a customer can ensure optimum responsiveness by simply bidding
-enough to be the top bidder. In the second, a minimum timeout dependent on the
-total number of bids is present; this may incentivize higher bids (to bump off
-small bids at the tail, or to reach solo bidder status) but could also have a
-significant negative impact on the usefulness of the beacon for pool bidders.
+The group reward equals the _base reward_
+multiplied by a _delay factor_
+equaling the fraction of time left by the submission deadline, squared:
+_group reward = base reward * delay factor_;
+_delay factor = (T~remaining~ / (T~deadline~ - T~begin~))^2^_;
+_T~remaining~ = T~deadline~ - T~received~_.
 
-== TBD
+The delay factor is counted
+from 1 in the first block a submission could be published in,
+to 0 in the deadline block which doesn't accept any more submissions.
 
-- value-added accessory features; calling some customer-defined contract with
-the beacon output?
-- details of pricing and timeout functions
+For example, assume the maximum time to submit is 20 blocks,
+the off-chain entry generation protocol takes 5 blocks
+and a request is made on block 1000.
+
+Block 1005 is the earliest block the submission could be published in:
+if published in this block the delay factor is 1.
+Block 1025 is the deadline block:
+no submissions are accepted and the delay factor is 0.
+
+If the entry is submitted in block 1009,
+the delay factor is:
+```
+((1025 - 1009) / (1025 - 1005))^2 = 0.8^2 = 0.64
+```
+Thus the _group reward = base reward * 0.64_,
+with the difference being the _delay penalty = base reward * (1 - 0.64)_.
+
+If the submission deadline is reached and the delay factor reaches 0,
+the entry submission fails and all group members are penalized.
+
+===== Submitter reward
+How are submitters compensated?
+
+In addition to the _group reward_,
+the submitter is reimbursed for gas fees
+and receives an extra reward.
+
+The _submitter reward_ consists of
+the _callback expenditure_ to cover the exact cost of the callback;
+the _entry verification fee_ to cover the cost of verifying the submission;
+and 5% of the _delay penalties_ of the entire group.
+
+Unlike the _callback allowance_,
+the entire _entry verification fee_ is paid to the submitter
+regardless of their gas expenditure.
+The submitter is free to spend less or more,
+keeping the surplus or paying the difference.
+This is to incentivize optimizing gas fees.
+
+To incentivize a race for the submitter position,
+the submitter receives _delay penalty * group size * 0.05_ as an extra reward.
+With realistic group sizes this is significant,
+but not high enough to render certain attacks profitable.
+If the group size is 100 and the delay factor is 0.64,
+the submitter receives an extra reward of
+_base reward * 0.36 * 100 * 0.05 = base reward * 1.8_.
+In this scenario the full submitter reward would be
+_base reward * (1.8 + 0.64) + callback expenditure + entry verification fee_.
+
+==== DKG submitter reimbursement
+How is the DKG submitter compensated?
+
+Getting to participate in a formed group is already valuable so there is no
+additional reward for a DKG result submitter. The only thing necessary is a gas
+cost reimbursement for the submitter.
+
+After DKG result is submitted, the amount of gas spent on the call is 
+multiplied with the lower of the estimated gas price at the time of submitting
+the result, or the actual gas price of the transaction to get the _DKG result
+submission expenditure_.
+
+The entire DKG result submission expenditure is returned to the submitter
+from the _DKG fee pool_ of the operator contract.
+
+Any surplus between the _DKG fee pool_ of the operator contract and 
+the actual cost of DKG result submission is returned back to the service 
+contract. In the case when the entire DKG fails, the unspent fee will be 
+transferred back to the service contract upon the next DKG triggered by the 
+service contract.
+
+The minimum of the gas price protects the beacon against malicious 
+miner-submitters. If the submitter is also a miner, they can place any 
+arbitrary gas price on the transaction. Without taking the minimum, 
+miner-submitter would be able to steal from _DKG fee pool_ of the operator 
+contract.
+
+The on-chain DKG result submission code needs to have all deterministic 
+and time-bounded run paths that are independent of miner-controlled inputs. 
+If the miner-submitter pays the gas price estimated by the price feed, but 
+tricks the contract into consuming twice the gas as normal, they will be able 
+to get twice the reimbursement as well. 
+
+==== Cost estimates
+How do we estimate the various costs?
+
+===== Gas price feed
+Where does the gas price come from?
+
+A short-term gas price feed is required
+to estimate the gas cost components.
+
+The critical feature of the gas price feed is
+that the feed price multiplied by a safety margin for fluctuations (e.g. 1.5)
+should be sufficient for getting beacon entries processed
+within the deadline under all circumstances.
+The gas price estimate for an entry is set when the request is processed,
+but the entry submission transaction will be sent later.
+
+If actual gas prices rise to a level
+where the feed price and margin are insufficient
+for getting a transaction to be mined,
+and stays there for the duration of the entry submission window,
+the basic profit margin for the operators cannot be guaranteed.
+
+However, this does not imply that high gas prices
+would render the beacon inoperable.
+The submitter's extra reward incentivizes submitting
+even when the entry verification fee cannot cover the gas costs.
+In the extreme,
+avoiding the severe penalty for failure to produce an entry
+should incentivize group members to pay the gas prices
+up to the (theoretical) limit
+where gas for the entry submission transaction
+costs as much as the KEEP tokens at stake.
+
+The exact implementation of this gas price feed
+is out for scope for this RFC.footnote:[A rather obvious candidate
+is to use the gas price paid by the requester.
+This doesn't work if the requester is a miner
+as they can provide an arbitrarily low price.
+]
+
+===== DKG cost estimate
+How do we calculate the cost of running the DKG?
+
+The gas required for DKG should be calculated.
+DKG gas cost should include only DKG result submission. Ticket submission
+costs are covered by the expected return from getting into a signing group.
+Multiply DKG gas by gas estimate to get DKG cost estimate.
+Use a DKG frequency divider _d_ to set the group creation rate;
+once every _d_ entries on average.
+Divide DKG cost estimate by _d_ to get DKG contribution for each entry.
+
+The maximum DKG gas cost should be hardcoded in the operator contract.
+The service contract takes the highest applicable gas cost from all operator
+contracts being used and multiplies it by the fluctuation margin times gas price 
+feed's estimate.
+
+Because DKG is performed when sufficient gas money has accumulated,
+fluctuations in gas prices don't need special consideration.
+When gas costs are rising,
+DKG gets performed less frequently
+until prices (and thus gas cost contributions) stabilize.
+As long as the fluctuation safety factor is sufficient
+to cover the immediate rise in gas fees during DKG execution
+the beacon is capable of generating new groups.
+Similarly, when gas costs fall DKG gets triggered faster.
+
+===== Entry verification fee
+How do we calculate the gas required for entry verification?
+
+Calculate gas required for verifying entry and associated support operations.
+The maximum entry verification gas cost should be hardcoded in the operator
+contract. The service contract takes the highest applicable gas cost from all 
+operator contracts being used and  multiplies it by the fluctuation margin 
+(e.g. 1.5) times gas price feed's estimate to get entry verification fee.
+
+==== Cleanup gas efficiency
+How do we calculate the cost of cleanup or post processing?
+
+As the gas cost of storing data in a previously zero field
+and later zeroing it again (20,000 + 5,000 - 15,000 = 10,000)
+exceeds the cost of modifying a nonzero field (5,000),
+cleaning unnecessary fields would appear to increase operating costs
+with little upside.
+
+However, gas costs in the entry submission transaction
+contribute 1.5 times as much to the effective price of beacon entries.
+Thus the 10,000 gas net refund per field
+is effectively worth 15,000 gas,
+making both options equal to the requester.
+The difference of 5,000 actual gas is effectively paid by the submitter
+in the form of a lower _entry verification fee_.
+
+Packing request data more densely,
+where applicable,
+could further reduce operating costs.
+
+===== Zeroing everything
+
+
+Resetting all request fields to zero after serving a request
+increases the immediate gas cost of making a request,
+but reduces the entry verification fee by a roughly equal amount.
+
+This results in a slightly lower total revenue for operators,
+but reduces the possible space of programming errors marginally;
+false positives for pending requests are eliminated
+even if the wrong field is queried.
+In practice this benefit is negligible.
+
+===== Wiping the minimum necessary
+
+Wiping only the necessary fields results in higher operator revenue
+for the same net price paid by requesters.
+Additionally, if a field remains nonzero but unchanged between requests
+even greater gas savings can be obtained.
+
+The field used to determine the presence of a pending request must be wiped.
+
+The requester address,
+assigned signing group,
+submission delay base time,
+gas price estimate
+and request fee
+are always written when a request is received.
+These are not necessary to wipe,
+but one of them must be chosen to signify the presence of a pending request
+with a nonzero value.
+
+Requester address, signing group, gas price and fee
+can theoretically stay unchanged between requests.
+If a single heavy user makes a number of consecutive requests
+with the same callback (gas amount) and gas prices are stable,
+this would provide a minor reduction in beacon operating costs.
+
+The submission delay base time
+is guaranteed to change when a new request is made,
+and thus is the most efficient indicator of a pending request.
+Using the maximum value instead of zero for "no request"
+is slightly more efficient.
+
+The presence of a callback can be determined by either 
+the callback address or callback gas.
+
+The callback address is likely to remain the same
+only if the requester is the same.
+
+Because excess callback gas is refunded
+the only cost of setting a higher callback gas is the tied-up liquidity,
+with the exception of callbacks
+where excessive gas consumption indicates an error state
+where reverting is preferable to continuing.
+With well-programmed callback contracts,
+the callback gas amount is only necessary to modify
+if it needs to be increased,
+or if the requester cannot afford the higher gas allowance.
+
+This suggests that using callback address to denote the presence of a callback
+allows minor efficiency gains.
+Modifying the callback address when a request is processed,
+including setting it to zero in a no-callback request,
+further improves gas efficiency.
+
+=== Limitations
+
+Entry pricing is mostly static;
+entry quality has a slight effect on price
+(faster entries -> lower surplus -> lower request subsidies)
+but other factors apart from gas fees do not impact the price.
+
+Processing entries one-by-one doesn't scale.
+
+== Future Work
+
+Instead of rejecting new requests when one has already been made,
+the beacon could accept a single queued request,
+to be served after the active one.
+Other requesters could outbid the current queued request
+by paying enough to process the request and refund the previous one,
+and provide some specified (e.g. 1.2) increase in the profit margin.
+When the current active request is served,
+the queued request automatically becomes the next active request.
+
+This method would act as both a price floor and a supply cap,
+while capturing the effective price increase when demand exceeds supply,
+instead of letting it go to miners
+as customers try to get their requests processed first.
+
+== Open Questions
+
+The implementation of the gas price feed is out of scope.
+The method of estimating gas fees,
+the timespan over which the estimate should be calculated,
+and the fluctuation safety margin are not yet defined.
+
+////
+[bibliography]
+== Related Links
+
+- Flowdock Links
+////
