--- a/docs/random-beacon/pricing.adoc
+++ b/docs/random-beacon/pricing.adoc
@@ -32,9 +32,7 @@ the customer must call the request method on the beacon,
 transferring enough currency to cover the fee:
 `request_entry.value(entry_fee_estimate)()`.
 
-If the customer wishes to receive the generated random number in a callback,
-they should also specify the _callback address_, _callback function_, 
-and _callback gas amount_:
+If the customer wishes to receive the generated random number in a callback, they should also specify the _callback address_, _callback function_, and _callback gas amount_:
 `request_entry.value(entry_fee_estimate)(callback_address, callback_function, callback_gas)`.
 
 No new requests should be made
